--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,12 +1,22 @@
 nav{
-    padding: 20px 50px;
+    padding: 10px 50px;
+    background-color: #FFCC01;
+    border-bottom: 6px solid #2B6DB6;
     ul{
         display: flex;
+        align-items: center;
         gap: 30px;
         list-style: none;
 
         li:nth-child(2){
             margin-left: auto;
+        }
+
+        a{
+            color: #2B6DB6;
+            text-decoration: none;
+            font-size: 2rem;
+            font-weight: bold;
         }
 
     }
