--- a/src/pages/PokemonlistPage.scss
+++ b/src/pages/PokemonlistPage.scss
@@ -2,6 +2,7 @@ main{
     padding: 30px 10%;
     div{
         display: inline-block;
+        margin: 20px 30px;
 
         img{
             width: 200px;
